--- a/components/Test/test.css
+++ b/components/Test/test.css
@@ -27,3 +27,60 @@
   border-top-left-radius: 100%;
   border-bottom-left-radius: 100%;
 }
+
+@media screen and (max-width: 650px) {
+  .action-buttons {
+    position: sticky;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    border-radius: 0;
+  }
+}
+
+@media screen and (min-height: 700px) {
+  .action-buttons {
+    top: 600px;
+  }
+}
+
+@keyframes red-flash {
+  0% {
+    box-shadow: 0px 0px 0px 0px rgba(250, 82, 82, 1);
+  }
+
+  50% {
+    box-shadow: 0px 0px 12vw 10px rgba(250, 82, 82, 1);
+  }
+
+  100% {
+    box-shadow: 0px 0px 24vw 15px rgba(250, 82, 82, 0);
+  }
+}
+
+@keyframes green-flash {
+  0% {
+    box-shadow: 0px 0px 0px 0px rgb(39, 150, 58, 1);
+  }
+
+  50% {
+    box-shadow: 0px 0px 12vw 10px rgba(39, 150, 58, 1);
+  }
+
+  100% {
+    box-shadow: 0px 0px 24vw 15px rgba(39, 150, 58, 0);
+  }
+}
+
+#disagree-button[data-flash="flash"] {
+  animation-name: red-flash;
+  animation-duration: 200ms;
+  animation-timing-function: linear;
+}
+
+#agree-button[data-flash="flash"] {
+  animation-name: green-flash;
+  animation-duration: 200ms;
+  animation-timing-function: linear;
+}
